insere  plugin de mutacao pit